src/objects/Suspension_Debarment_Parameters__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom settings to store Suspension and Debarment field values</description>
    <fields>
        <fullName>CaseNameText__c</fullName>
        <label>CaseNameText</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number_Field_ID__c</fullName>
        <description>Field to store Case Number Field Id</description>
        <label>Case Number Field ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENT_Field_ID__c</fullName>
        <description>Field to store ENT Field Id</description>
        <label>ENT Field ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrity_Officer_Name__c</fullName>
        <label>Integrity_Officer_Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeID__c</fullName>
        <description>Field to store Record Type ID</description>
        <label>RecordTypeID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnURL_Field_ID__c</fullName>
        <description>Return URL Field Id for New Respondents</description>
        <label>ReturnURL Field ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Suspension Debarment Parameters</label>
</CustomObject>